Bug: none - SCSS/CSS was broken in JP.
Summary:
While merging scss from chat branch to JP, the license block doesn't properly merge hence adding one more license block with your changes without proper block level comment delimiters.

Copied from Perforce
 Change: 558731

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1479,12 +1479,6 @@
 #conversejs #login-dialog .connectionSpinnerPanel A.conn-retry {
   text-decoration: underline; }
 
-/* Converse.js (Web-based XMPP instant messaging client)
-* http://conversejs.org
-*
-* Copyright (c) 2012-2014, JC Brand <jc@opkode.com>
-* Licensed under the Mozilla Public License
-*/
 #conversejs #converse-roster dd a, .search-converse-contact dd a {
   /* ZCS - decline contact request icon */
   /* ZCS - accept contact request icon */ }
@@ -1552,14 +1546,14 @@
 #conversejs a.open-chat span.icon-online, a.open-chat span.icon-offline, a.open-chat span.icon-dnd, a.open-chat span.icon-away {
   margin-right: 0.15rem; }
 
-#conversejs span.icon-online, span.icon-offline, span.icon-dnd, span.icon-away, #conversejs a.close-chatbox-button {
+#conversejs span.icon-online, span.icon-offline, span.icon-dnd, span.icon-away {
   font-size: 1.3rem; }
 
 #conversejs .chatbox .dropdown span.icon-online,
 #conversejs .chatbox .dropdown span.icon-offline,
 #conversejs .chatbox .dropdown span.icon-dnd,
 #conversejs .chatbox .dropdown span.icon-away {
-  padding-top: 0.3rem; }
+  padding-top: 0.38rem; }
 
 #conversejs .chat-title {
   padding: 0px 0px 0px 0px; }
@@ -1567,20 +1561,3 @@
 /*Style for the top right icons on the buddy list*/
 #conversejs #controlbox div.xmpp-status > SPAN {
   margin-top: 0.5rem; }
-
-#conversejs a.close-chatbox-button {
-  font-size: 1.1rem;
-  margin-top: 0.1rem; }
-
-#conversejs .chatbox .dropdown a {
-  margin-top: 0.1rem; }
-
-#conversejs .chatbox .dropdown dt a span {
-  padding-right: 0.4rem; }
-
-#conversejs .chat-title [class^="icon-"] {
-  padding-right: 0.2rem; }
-
- /*#conversejs a.choose-xmpp-status.online {
-    margin-top: 0.05rem;
-}*/
